--- a/src/ceph-node-proxy/tox.ini
+++ b/src/ceph-node-proxy/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = mypy,flake8,isort,black
+envlist = mypy,flake8,isort,black,pytest
 minversion = 3.0
 skipsdist = true
 
@@ -28,3 +28,10 @@ commands = isort --profile black --check-only --diff ceph_node_proxy
 description = Check code formatting with black
 deps = black >= 23.0
 commands = black --check ceph_node_proxy
+
+[testenv:pytest]
+description = Run unit tests with pytest
+deps =
+    pytest >= 7.0
+    PyYAML
+commands = pytest tests/ -v
