.github/workflows/redmine-upkeep: run for release branches
Signed-off-by: Patrick Donnelly <pdonnell@ibm.com>

--- a/.github/workflows/redmine-upkeep.yml
+++ b/.github/workflows/redmine-upkeep.yml
@@ -23,6 +23,9 @@ on:
     types: [closed]
     branches:
       - main
+      - squid
+      - tentacle
+      - umbrella
 # TODO enable/setup after upkeep has caught up
 #  push:
 #    tags:
